@@ -55,3 +55,6 @@ IfMethod
 2010-05-05
 FunctioMethod
 ListObject w/tests
+
+2010-05-08
+Real support in lexer, parser, evaluation
